--- a/docs/docs/genai/prompt-version-mgmt/version-tracking/compare-app-versions.mdx
+++ b/docs/docs/genai/prompt-version-mgmt/version-tracking/compare-app-versions.mdx
@@ -5,7 +5,7 @@ description: Compare different LoggedModel versions to track improvements and id
 
 # Compare App Versions
 
-After [evaluating your customer support agent](/genai/prompt-version-mgmt/version-tracking/link-evaluation-results-and-traces-to-app-versions), let's make an improvement and compare the performance between versions. This guide shows how to track changes and objectively compare different versions of your application.
+After evaluating your customer support agent, let's make an improvement and compare the performance between versions. This guide shows how to track changes and objectively compare different versions of your application.
 
 ## Creating an Improved Version
 
@@ -227,5 +227,4 @@ You can extend this pattern to:
 
 ## Next Steps
 
-- **[Deploy your best version](/genai/prompt-version-mgmt/version-tracking/optionally-package-app-code-and-files-for-databricks-model-serving)** to Databricks Model Serving
-- **[Monitor production performance](/genai/prompt-version-mgmt/version-tracking/link-production-traces-to-app-versions)** by linking traces to deployed versions
+You can now deploy your best performing version and monitor its performance in production by linking traces to deployed versions.
