--- a/docs/docs/genai/tracing/lightweight-sdk.mdx
+++ b/docs/docs/genai/tracing/lightweight-sdk.mdx
@@ -68,26 +68,7 @@ print(response.choices[0].message.content)
 The lightweight SDK works with various observability platforms. Choose your preferred option and follow the instructions to set up your tracing backend.
 
 <Tabs>
-  <TabItem value="databricks" label="Databricks" default>
-    <div class="flex-column">
-      <div class="flex-row">
-        <div class="flex-item">
-
-          [Databricks Lakehouse Monitoring for GenAI](https://docs.databricks.com/aws/en/generative-ai/agent-evaluation/monitoring) is a go-to solution for monitoring your GenAI application with MLflow Tracing. It provides access to a robust, fully functional monitoring dashboard for operational excellence and quality analysis.
-
-          Lakehouse Monitoring for GenAI can be used regardless of whether your application is hosted on Databricks or not.
-
-          [Sign up for free](https://signup.databricks.com/?destination_url=/ml/experiments-signup?source=OSS_DOCS&dbx_source=TRY_MLFLOW&signup_experience_step=EXPRESS&provider=MLFLOW) and [get started in a minute](https://docs.databricks.com/aws/en/generative-ai/agent-evaluation/monitoring) to run your GenAI application with complete observability.
-        </div>
-
-        <div class="flex-item padding-md">
-          ![Monitoring](https://assets.docs.databricks.com/_static/images/generative-ai/monitoring/monitoring-hero.gif)
-        </div>
-      </div>
-    </div>
-
-  </TabItem>
-  <TabItem value="self-hosting" label="Self-Hosted MLflow">
+  <TabItem value="self-hosting" label="Self-Hosted MLflow" default>
     <div class="flex-column">
       <div class="flex-row">
         <div class="flex-item">
@@ -110,6 +91,26 @@ The lightweight SDK works with various observability platforms. Choose your pref
         </div>
       </div>
     </div>
+  </TabItem>
+
+  <TabItem value="databricks" label="Databricks">
+    <div class="flex-column">
+      <div class="flex-row">
+        <div class="flex-item">
+
+          [Databricks Lakehouse Monitoring for GenAI](https://docs.databricks.com/aws/en/generative-ai/agent-evaluation/monitoring) is a go-to solution for monitoring your GenAI application with MLflow Tracing. It provides access to a robust, fully functional monitoring dashboard for operational excellence and quality analysis.
+
+          Lakehouse Monitoring for GenAI can be used regardless of whether your application is hosted on Databricks or not.
+
+          [Sign up for free](https://signup.databricks.com/?destination_url=/ml/experiments-signup?source=OSS_DOCS&dbx_source=TRY_MLFLOW&signup_experience_step=EXPRESS&provider=MLFLOW) and [get started in a minute](https://docs.databricks.com/aws/en/generative-ai/agent-evaluation/monitoring) to run your GenAI application with complete observability.
+        </div>
+
+        <div class="flex-item padding-md">
+          ![Monitoring](https://assets.docs.databricks.com/_static/images/generative-ai/monitoring/monitoring-hero.gif)
+        </div>
+      </div>
+    </div>
+
   </TabItem>
 
   <TabItem value="opentelemetry" label="OpenTelemetry">
