Fix docs content (#16179)
Signed-off-by: serena-ruan <serena.rxy@gmail.com>

--- a/docs/docs/genai/index.mdx
+++ b/docs/docs/genai/index.mdx
@@ -30,7 +30,7 @@ Whether you're building your first chatbot or scaling enterprise AI systems, the
 
           Master GenAI development with our [tracing quickstart](/genai/getting-started/tracing)
 
-          Ensure quality with [LLM evaluation](/genai/getting-started/eval)
+          Ensure quality with [LLM evaluation](https://docs.databricks.com/aws/en/mlflow3/genai/getting-started/eval.html)
 
         </div>
 
@@ -73,6 +73,8 @@ Whether you're building your first chatbot or scaling enterprise AI systems, the
           [Prompt Engineering UI](/genai/prompt-version-mgmt/prompt-engineering) for no-code development
 
           [Create and edit prompts](/genai/prompt-version-mgmt/prompt-registry/create-and-edit-prompts)
+
+          [Optimize prompts](/genai/prompt-version-mgmt/prompt-registry/optimize-prompts)
 
           [Evaluate prompts](/genai/prompt-version-mgmt/prompt-registry/evaluate-prompts)
 
