--- a/docs/docs/classic-ml/mlflow-3/index.mdx
+++ b/docs/docs/classic-ml/mlflow-3/index.mdx
@@ -6,7 +6,7 @@ sidebar_position: 1
 import { APILink } from "@site/src/components/APILink";
 import { CardGroup, PageCard } from "@site/src/components/Card";
 
-# MLflow 3.0 (Preview)
+# MLflow 3.0
 
 Discover the next generation of MLflow, designed to streamline your AI experimentation and accelerate your journey from idea to production. MLflow 3.0 brings cutting-edge support for GenAI workflows, enabling seamless integration of generative AI models into your projects.
 
