--- a/docs/docs/genai/mlflow-3/index.mdx
+++ b/docs/docs/genai/mlflow-3/index.mdx
@@ -264,7 +264,7 @@ MLflow 3.0 introduces some key API changes while also removes some outdated feat
     </tr>
     <tr>
       <td>Model artifacts storage location</td>
-      <td>[model artifacts](/genai/model/#storage-format) are stored as run artifacts.</td>
+      <td>model artifacts are stored as run artifacts.</td>
       <td>Model artifacts are stored into models artifacts location. Note: this impacts the behavior of <APILink fn="mlflow.client.MlflowClient.list_artifacts">list_artifacts</APILink> API.</td>
     </tr>
   </tbody>
